--- a/package.json
+++ b/package.json
@@ -12,31 +12,29 @@
   "dependencies": {
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.16.0",
     "icons": "^1.0.0",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "swiper": "^11.2.8"
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0"
-    "react-icons": "^5.5.0",
-
-    "react-router-dom": "^7.6.0",
-    "swiper": "^11.2.8"
-
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "vite": "^6.3.5"
   }
 }
