--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.17.3",
@@ -21,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
@@ -35,7 +37,6 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.4",
     "rollup": "^3.29.5",
-    "tailwindcss": "^4.1.8",
     "tailwindcss": "^4.1.10",
     "vite": "^6.3.5"
   }
